--- a/views/list.ejs
+++ b/views/list.ejs
@@ -6,11 +6,12 @@
 
     <div class="box">
         <% for (let item of newListItems) { %>
-
-            <div class="item">
-                <input type="checkbox">
-                <p><%= item %></p>
-            </div>
+            <form action="/delete" method="post">
+                <div class="item">
+                    <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
+                    <p><%= item.name %></p>
+                </div>
+            </form>
 
         <% } %>
 
